--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "react-scripts": "5.0.1",
     "redux-saga": "^1.1.3",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/uuid": "^8.3.4",
+    "classnames": "^2.3.1",
+    "normalize.css": "^8.0.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "sass": "^1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
