--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.3.0",
+        "@types/bootstrap": "^5.2.1",
         "@types/jest": "^27.5.2",
         "@types/node": "^17.0.45",
         "@types/react": "^18.0.15",
@@ -17,8 +18,10 @@
         "antd": "^4.22.2",
         "axios": "^0.27.2",
         "babel-plugin-module-resolver": "^4.1.0",
+        "bootstrap": "^5.2.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.4.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
