--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "blog-app-team-2",
+    "homepage": "https://thanhkun95.github.io/demo-react/",
+    "name": "demo-react",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -19,6 +20,7 @@
         "axios": "^0.27.2",
         "babel-plugin-module-resolver": "^4.1.0",
         "bootstrap": "^5.2.0",
+        "gh-pages": "^4.0.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.4.0",
@@ -43,7 +45,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
